src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>Used to specify the address of meeting location.</description>
        <inlineHelpText>This address is used to show google map on ef.com. Please enter only address and not phone numbers or meeting times.</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DateFrom__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The user should be able to select a date only greater than or equal to today and the time.</description>
        <label>Date From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTo__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>The user should not be allowed to select a date different from that entered in &quot;Date From&quot;.</description>
        <label>Date To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EFCOMMarket__c</fullName>
        <label>EF.COM Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>WM</fullName>
                </value>
                <value>
                    <fullName>UE</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsUP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is editable only if selected program is AY or AYP.</description>
        <label>Is UP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MeetingCity__c</fullName>
        <description>Display&apos;s a list of cities in the market.</description>
        <label>Meeting City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aachen</fullName>
                </value>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Agen</fullName>
                </value>
                <value>
                    <fullName>Agrigento</fullName>
                </value>
                <value>
                    <fullName>Agropoli</fullName>
                </value>
                <value>
                    <fullName>Aix en Provence</fullName>
                </value>
                <value>
                    <fullName>Aix-Marseille</fullName>
                </value>
                <value>
                    <fullName>Ajaccio</fullName>
                </value>
                <value>
                    <fullName>Al Ain</fullName>
                </value>
                <value>
                    <fullName>ALASSIO</fullName>
                </value>
                <value>
                    <fullName>Albi</fullName>
                </value>
                <value>
                    <fullName>Alessandria</fullName>
                </value>
                <value>
                    <fullName>Alger</fullName>
                </value>
                <value>
                    <fullName>Alghero</fullName>
                </value>
                <value>
                    <fullName>Amiens</fullName>
                </value>
                <value>
                    <fullName>Ancona</fullName>
                </value>
                <value>
                    <fullName>Angers</fullName>
                </value>
                <value>
                    <fullName>Annecy</fullName>
                </value>
                <value>
                    <fullName>Annemasse</fullName>
                </value>
                <value>
                    <fullName>Annonay</fullName>
                </value>
                <value>
                    <fullName>Antibes</fullName>
                </value>
                <value>
                    <fullName>Aosta</fullName>
                </value>
                <value>
                    <fullName>Arcachon </fullName>
                </value>
                <value>
                    <fullName>Arezzo</fullName>
                </value>
                <value>
                    <fullName>Arras</fullName>
                </value>
                <value>
                    <fullName>Aschaffenburg</fullName>
                </value>
                <value>
                    <fullName>Ascoli Piceno</fullName>
                </value>
                <value>
                    <fullName>Asti</fullName>
                </value>
                <value>
                    <fullName>Auch</fullName>
                </value>
                <value>
                    <fullName>Augsburg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MeetingSize__c</fullName>
        <description>Indicates the total capacity for the meeting.</description>
        <label>Meeting Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MeetingType__c</fullName>
        <label>MeetingType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info Meeting - Offline</fullName>
                </value>
                <value>
                    <fullName>Info Meeting - Online</fullName>
                </value>
                <value>
                    <fullName>Open House</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product to which Campaign belongs.</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOffice__c</fullName>
        <label>SalesOffice</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SendtoEFCOM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The record will be sent to &quot;EF.com&quot; if this field is checked.</description>
        <label>Send to EF.COM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueField__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <description>Backend field to check record uniqueness.</description>
        <label>Unique Field</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Market__c</columns>
        <columns>SalesOffice__c</columns>
        <columns>Program__c</columns>
        <columns>MeetingCity__c</columns>
        <columns>DateFrom__c</columns>
        <columns>DateTo__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Market__c</columns>
        <columns>SalesOffice__c</columns>
        <columns>Program__c</columns>
        <columns>MeetingCity__c</columns>
        <columns>DateFrom__c</columns>
        <columns>DateTo__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>InfoMeeting</fullName>
        <active>true</active>
        <label>Info Meeting</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>DateFromNotLessThanToday</fullName>
        <active>true</active>
        <description>The user should be able to select a date only greater than or equal to today and the time.</description>
        <errorConditionFormula>And(NOT($Setup.BypassTriggersValidations__c.DisableValidations__c ),(DateFrom__c &lt;  NOW()  &amp;&amp; ISNEW()) || ((ISCHANGED(DateFrom__c)) &amp;&amp; (DateFrom__c &lt;  NOW())))</errorConditionFormula>
        <errorMessage>Info Meetings cannot be created for the past. Please select a different date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DateToSameAsDateFrom</fullName>
        <active>true</active>
        <description>Date shouldn&apos;t be different from that entered in &quot;Date From&quot;.</description>
        <errorConditionFormula>And(NOT($Setup.BypassTriggersValidations__c.DisableValidations__c ),(DATEVALUE(DateFrom__c ) &lt;&gt;  DATEVALUE(DateTo__c)))</errorConditionFormula>
        <errorMessage>Info Meetings should be created for the same day. Please modify the date and try again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DateToTimeSameAsDateFrom</fullName>
        <active>true</active>
        <description>Time in &apos;Date To&apos; should be greater than &apos;Date From&apos;</description>
        <errorConditionFormula>And(NOT($Setup.BypassTriggersValidations__c.DisableValidations__c ),(DateTo__c &lt;= DateFrom__c))</errorConditionFormula>
        <errorMessage>Date To should always be greater than Date From.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EFComMarketValidationRule</fullName>
        <active>true</active>
        <description>EF.COM is mandatory if  Send to EF.COM is checked</description>
        <errorConditionFormula>And(NOT($Setup.BypassTriggersValidations__c.DisableValidations__c ),((ISBLANK(TEXT(EFCOMMarket__c))) &amp;&amp; (SendtoEFCOM__c)))</errorConditionFormula>
        <errorMessage>Please select the EF.COM Market.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieldsNonUpdatable</fullName>
        <active>true</active>
        <description>Market, Sales Office, Product and Program cannot be updated.</description>
        <errorConditionFormula>And(NOT($Setup.BypassTriggersValidations__c.DisableValidations__c ),ISCHANGED(Market__c  ) ||  ISCHANGED(SalesOffice__c  ) || ISCHANGED(Product__c )|| ISCHANGED( Program__c ))</errorConditionFormula>
        <errorMessage>Market, Sales Office, Product and Program cannot be edited once the meeting is created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IsUPValidationRule</fullName>
        <active>true</active>
        <description>This field is editable only if the selected program is AY or AYP</description>
        <errorConditionFormula>And(NOT($Setup.BypassTriggersValidations__c.DisableValidations__c ),NOT(ISPICKVAL(Program__c  , &apos;AY&apos;) || ISPICKVAL(Program__c  , &apos;AYP&apos;)) &amp;&amp;  IsUP__c)</errorConditionFormula>
        <errorMessage>&apos;Is UP&apos; is applicable only for Program &apos;AY&apos; and &apos;AYP&apos;.</errorMessage>
    </validationRules>
</CustomObject>